--- a/array/array.html
+++ b/array/array.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>    
-    <script src="./array.js"></script>
+    <script src="./array2.js"></script>
 </head>
 <body>
     
